# forge

./: .env.example  .gitignore  ARCHITECTURE.md  HYPERION_AUDIT_AND_FIX_PLAN.md  README.md  pyproject.toml  searxng-limiter.toml  searxng_settings.yml  test_tui_quick.py
assets/fonts/: README.md
docs/: HYPERION_MASTER_REMEDIATION_PLAN.md
hyperion/: __init__.py  cli.py  config.py  orchestrator.py
hyperion/agents/: __init__.py  base.py  bus.py  engagement_director.py  sub_agent.py  synthesis_lead.py
hyperion/agents/delivery/: __init__.py  presentation_designer.py  render_engine.py
hyperion/agents/specialists/: __init__.py  competitive_intel.py  consumer_insights.py  financial_analyst.py  innovation_analyst.py  ma_analyst.py  market_analyst.py  operations_analyst.py  regulatory_analyst.py  risk_analyst.py  strategy_analyst.py  sustainability_analyst.py  technology_analyst.py
hyperion/eval/: __init__.py  ci_gate.py  harness.py
hyperion/obs/: __init__.py  artifact_store.py  health.py  run_journal.py  run_manifest.py  trace.py
hyperion/output/: __init__.py  charts.py  images.py  markdown.py  render.py
hyperion/router/: __init__.py  budget.py  estimator.py  router.py  semantic_cache.py  speculative_racer.py  structured_validator.py  wait_gate.py
hyperion/schemas/: __init__.py  agents.py  models.py  research.py  workflow.py
hyperion/tools/: __init__.py  alpha_vantage.py  camoufox_client.py  crawl4ai.py  curl_cffi_client.py  deep_search.py  flaresolverr.py  fred.py  http_extract.py  jina.py  nodriver_client.py  obscura.py  query_utils.py  search_budget.py  searxng.py  second_brain.py  stealth_search.py  unified_extract.py  unified_search.py  unsplash.py  wayback.py
hyperion/tui/: app.py  banner.py  boot.py  content.py  roster.py  theme.py
tests/: __init__.py  test_agents.py  test_eval.py  test_output.py  test_p13.py  test_router.py  test_stealth_extract.py  test_tools.py  test_wait_gate.py
vault/frameworks/: bcg-matrix.md  blue-ocean.md  dcf-valuation.md  esg-assessment.md  game-theory.md  lean-six-sigma.md  market-sizing.md  moat-assessment.md  porters-five-forces.md  quality-rubric.md  risk-matrix.md  swot-tows.md  trl-hype-cycle.md  vrio.md
vault/sources/: credibility-scoring.md
(+28 files in other folders)
